fixed flex aligned vertically

--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -9,18 +9,20 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    /* background-image: url("/static/images/signin.png"); */
     height: 100%;
     min-height: calc(100vh - 80px);
 }
 
 .account__formWrapper {
-    flex-grow: 1
+    display: flex;
+    flex-grow: 1;
+    align-self: center;
 }
 
 .account__form {
     margin: 0 auto;
     position: relative;
+    width: 100%;
 }
 
 .account__img {
